[project]
name = "web-scraping-ons"
version = "0.1.0"
description = "Web Scraping do site do ONS"
authors = [
    {name = "Rodrigo-Caldas", email = "rodrigocaldas@id.uff.br"},
]
dependencies = ["httpx>=0.28.1", "beautifulsoup4>=4.13.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "flake8>=7.1.2",
    "black>=25.1.0",
    "mypy>=1.15.0",
]
