[project]
name = "web-scraping-ons"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rodrigo-Caldas", email = "rodrigocaldas@id.uff.br"},
]
dependencies = ["selenium>=4.29.0", "pydantic-settings>=2.8.1", "beautifulsoup4>=4.13.3", "webdriver-manager>=4.0.2", "rich>=13.9.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.mypy.overrides]]
module = [
    "webdriver_manager.chrome",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "flake8>=7.1.2",
    "black>=25.1.0",
    "mypy>=1.15.0",
    "isort>=6.0.1",
    "autoflake>=2.3.1",
]
